# deta-utils-discord-bot

./: .gitignore  Discovery.md  README.md  Spacefile  considerations.md  example.env  local_testing.py  main.py  requirements.txt
blueprints/: faq.py  notes.py  tags.py
bot/: clear_commands.py  pyproject.toml  requirements.txt  run.py  run_local.py  update_commands.py
bot/utilsbot/: main.py
bot/utilsbot/blueprints/: notes.py  tags.py
bot/utilsbot/default_tags/: bot_info.json  ephemeral.json  intro.json
tests/: conftest.py
tests/test_notes/: test_read_note.py  test_write_note.py
tests/test_tags/: test_read_tag.py
