[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "UtilsBot"
version = "0.1.0"
authors = [
  { name="etrotta", email="etrotta@duck.com" },
]
dependencies = ['requests', 'PyNaCl', 'requests-toolbelt', 'deta', 'deta-discord-interactions', 'waitress']
description = "A discord bot."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]

[project.urls]
"Homepage" = "https://github.com/etrotta/deta-utils-discord-bot"